--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,8 @@
   </head>
 
   <body
-    class="bg-gray-100 text-gray-900 relative overflow-x-hidden min-h-screen"
+    class="app bg-gray-100 text-gray-900 relative overflow-x-hidden min-h-screen"
+    data-trash="{{ '1' if trash_view else '0' }}"
   >
     <!-- DECOR -->
     <div
